# cs344_cuda_udacity

./: CMakeLists.txt  main.cpp
lesson2/: CMakeLists.txt  tere.cu
squarin_numbers/: CMakeLists.txt  tere.cu
